--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
     "league/container": "^4.2",
     "twig/twig": "^v3.8",
     "psr/event-dispatcher": "^1.0",
-    "doctrine/dbal": "^4.0"
+    "doctrine/dbal": "^4.0",
+    "firebase/php-jwt": "^6.10",
+    "paragonie/sodium_compat": "^2.0"
   },
   "require-dev": {
     "symfony/var-dumper": "^7.0",
