--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     }
   },
   "require": {
+    "ext-pdo": "*",
     "nikic/fast-route": "^1.3",
     "psr/container": "^2.0",
     "league/container": "^4.2",
