--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     }
   },
   "require": {
+    "php": "^8.2",
     "ext-pdo": "*",
     "nikic/fast-route": "^1.3",
     "psr/container": "^2.0",
@@ -34,7 +35,8 @@
     "psr/event-dispatcher": "^1.0",
     "doctrine/dbal": "^4.0",
     "firebase/php-jwt": "^6.10",
-    "paragonie/sodium_compat": "^2.0"
+    "paragonie/sodium_compat": "^2.0",
+    "ext-openssl": "*"
   },
   "require-dev": {
     "symfony/var-dumper": "^7.0",
