--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "paragonie/sodium_compat": "^2.0",
     "ext-openssl": "*",
     "phpmailer/phpmailer": "^6.9",
-    "tinymce/tinymce": "^7.6"
+    "tinymce/tinymce": "^7.6",
+    "ext-simplexml": "*"
   },
   "require-dev": {
     "symfony/var-dumper": "^7.0",
